# CppCleaner

./: .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml  main.cpp  test.txt
